@@ -1,3 +1,7 @@
+mlr_2.7:
+- New argument "models" for function benchmark
+- fixed a bug where 'keep.pred' was ignored in the benchmark function
+
 mlr_2.6:
 - cluster.kmeans: added support for fuzzy clustering (property "prob")
 - regr.lm: removed some erroneous param settings
